--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="top-area">
         <div class="logo">
           <a href="#">
-            <img src="/images/logo.png" alt="">
+            <img src="./images/logo.png" alt="">
           </a>
         </div>
         <div class="s-box">
@@ -95,7 +95,7 @@
   </header>
   <main>
     <div class="compare">
-      <img src="/images/compare.png" alt="">
+      <img src="./images/compare.png" alt="">
       <span>Compare</span>
       <div class="cowantete">0</div>
     </div>
@@ -108,7 +108,7 @@
       <div class="m-contant">
         <div class="m-left-side">
           <a href="#">
-            <img src="/images/cover-1.png" alt="">
+            <img src="./images/cover-1.png" alt="">
           </a>
         </div>
         <div class="m-right-side">
@@ -131,7 +131,7 @@
           </div>
           <div class="m-bottom-right">
             <a href="#">
-              <img src="/images/right-cover.jpg" alt="">
+              <img src="./images/right-cover.jpg" alt="">
             </a>
           </div>
         </div>
@@ -199,97 +199,97 @@
         <div class="card-contanier">
           <div class="home-p-cart">
             <a href="#">
-              <img src="/images/AC.png" alt="">
+              <img src="./images/AC.png" alt="">
               <p>AC</p>
             </a>
           </div>
           <div class="home-p-cart">
             <a href="#">
-              <img src="/images/drone.png" alt="">
+              <img src="./images/drone.png" alt="">
               <p>Drone</p>
             </a>
           </div>
           <div class="home-p-cart">
             <a href="#">
-              <img src="/images/gimbal.png" alt="">
+              <img src="./images/gimbal.png" alt="">
               <p>Gimbal</p>
             </a>
           </div>
           <div class="home-p-cart">
             <a href="#">
-              <img src="/images/laptop.png" alt="">
+              <img src="./images/laptop.png" alt="">
               <p>Laptop</p>
             </a>
           </div>
           <div class="home-p-cart">
             <a href="#">
-              <img src="/images/laptop-acc.png" alt="">
+              <img src="./images/laptop-acc.png" alt="">
               <p>Laptop Accessories</p>
             </a>
           </div>
           <div class="home-p-cart">
             <a href="#">
-              <img src="/images/TV.png" alt="">
+              <img src="./images/TV.png" alt="">
               <p>TV</p>
             </a>
           </div>
           <div class="home-p-cart">
             <a href="#">
-              <img src="/images/mobile-phone.png" alt="">
+              <img src="./images/mobile-phone.png" alt="">
               <p>Moboile Phone</p>
             </a>
           </div>
           <div class="home-p-cart">
             <a href="#">
-              <img src="/images/mobile-phone-accessories.png" alt="">
+              <img src="./images/mobile-phone-accessories.png" alt="">
               <p>Mobile Accessories</p>
             </a>
           </div>
           <div class="home-p-cart">
             <a href="#">
-              <img src="/images/powerstation.png" alt="">
+              <img src="./images/powerstation.png" alt="">
               <p>Portable Power Station</p>
             </a>
           </div>
           <div class="home-p-cart">
             <a href="#">
-              <img src="/images/VR.png" alt="">
+              <img src="./images/VR.png" alt="">
               <p>VR (Virtual Reality)</p>
             </a>
           </div>
           <div class="home-p-cart">
             <a href="#">
-              <img src="/images/smart-watch.png" alt="">
+              <img src="./images/smart-watch.png" alt="">
               <p>Smart Watch</p>
             </a>
           </div>
           <div class="home-p-cart">
             <a href="#">
-              <img src="/images/action-camera.png" alt="">
+              <img src="./images/action-camera.png" alt="">
               <p>Action Camera</p>
             </a>
           </div>
           <div class="home-p-cart">
             <a href="#">
-              <img src="/images/earphone.png" alt="">
+              <img src="./images/earphone.png" alt="">
               <p>Ear Phone</p>
             </a>
           </div>
           <div class="home-p-cart">
             <a href="#">
-              <img src="/images/earbuds.png" alt="">
+              <img src="./images/earbuds.png" alt="">
               <p>Earbuds</p>
             </a>
           </div>
           <div class="home-p-cart">
             <a href="#">
-              <img src="/images/bt-speaker.png" alt="">
+              <img src="./images/bt-speaker.png" alt="">
               <p>Bluetooth Speakers</p>
             </a>
           </div>
           <div class="home-p-cart">
             <a href="#">
-              <img src="/images/gaming-console.png" alt="">
+              <img src="./images/gaming-console.png" alt="">
               <p>Gaming Console</p>
             </a>
           </div>
@@ -325,7 +325,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/phone.jpg" alt="">
+                <img src="./images/phone.jpg" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -348,7 +348,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-1.jpg" alt="">
+                <img src="./images/img-1.jpg" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -371,7 +371,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-2.jpg" alt="">
+                <img src="./images/img-2.jpg" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -394,7 +394,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-3.jpg" alt="">
+                <img src="./images/img-3.jpg" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -417,7 +417,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-3.jpg" alt="">
+                <img src="./images/img-3.jpg" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -442,7 +442,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-6.jpg" alt="">
+                <img src="./images/img-6.jpg" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -465,7 +465,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-7.jpg" alt="">
+                <img src="./images/img-7.jpg" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -488,7 +488,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-8.jpg" alt="">
+                <img src="./images/img-8.jpg" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -511,7 +511,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-9.jpg" alt="">
+                <img src="./images/img-9.jpg" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -534,7 +534,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-10.webp" alt="">
+                <img src="./images/img-10.webp" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -557,7 +557,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-11.webp" alt="">
+                <img src="./images/img-11.webp" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -580,7 +580,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-12.jpg" alt="">
+                <img src="./images/img-12.jpg" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -603,7 +603,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-13.webp" alt="">
+                <img src="./images/img-13.webp" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -626,7 +626,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-14.webp" alt="">
+                <img src="./images/img-14.webp" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -649,7 +649,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-15.jpg" alt="">
+                <img src="./images/img-15.jpg" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -672,7 +672,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-16.jpg" alt="">
+                <img src="./images/img-16.jpg" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -697,7 +697,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-17.webp" alt="">
+                <img src="./images/img-17.webp" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -720,7 +720,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-18.jpg " alt="">
+                <img src="./images/img-18.jpg " alt="">
               </a>
             </div>
             <div class=" p-detals">
@@ -743,7 +743,7 @@
             </div> -->
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-19.webp" alt="">
+                <img src="./images/img-19.webp" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -766,7 +766,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-20.jpg" alt="">
+                <img src="./images/img-20.jpg" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -789,7 +789,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-21.jpg" alt="">
+                <img src="./images/img-21.jpg" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -812,7 +812,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-22jpg.webp" alt="">
+                <img src="./images/img-22jpg.webp" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -837,7 +837,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-23.jpg" alt="">
+                <img src="./images/img-23.jpg" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -862,7 +862,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-24.jpg" alt="">
+                <img src="./images/img-24.jpg" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -887,7 +887,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-25.jpg" alt="">
+                <img src="./images/img-25.jpg" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -912,7 +912,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-26.jpg" alt="">
+                <img src="./images/img-26.jpg" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -935,7 +935,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-27.jpg" alt="">
+                <img src="./images/img-27.jpg" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -958,7 +958,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-28.jpg" alt="">
+                <img src="./images/img-28.jpg" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -983,7 +983,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-29.jpg" alt="">
+                <img src="./images/img-29.jpg" alt="">
               </a>
             </div>
             <div class="p-detals">
@@ -1006,7 +1006,7 @@
             </div>
             <div class="p-img">
               <a href="#">
-                <img src="/images/img-30.jpg" alt="">
+                <img src="./images/img-30.jpg" alt="">
               </a>
             </div>
             <div class="p-detals">
