added sub menu in nav bar

--- a/index.html
+++ b/index.html
@@ -70,7 +70,16 @@
       <div class="nav-contanier">
         <div class="nav-ber">
           <ul>
-            <li><a href="">Desktop</a></li>
+            <li class="sub_parent">
+              <a href="">Desktop</a>
+            <ul class="sub_child">
+              <li><a href="#">Something</a></li>
+              <li><a href="#">Something</a></li>
+              <li><a href="#">Something</a></li>
+              <li><a href="#">Something</a></li>
+              <li><a href="#">Something</a></li>
+            </ul>
+            </li>
             <li><a href="">Laptop</a></li>
             <li><a href="">Component</a></li>
             <li><a href="">Monitor</a></li>
@@ -1305,7 +1314,6 @@
     </div>
   </footer>
 
-  
 </body>
 
 </html>
