--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Star Tech - Leading Computer, Laptop &amp; Gadget Shop in Bangladesh</title>
+  <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
 
   <!-- Google Fonts stert-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
